# arctic-ice-solutions

./: .env.example  .env.production  .gitignore  .vercelignore  ANDROID_DEPLOYMENT_SETUP.md  APPLE_APP_STORE_SUBMISSION_GUIDE.md  APPLE_STORE_DEPLOYMENT_READY.md  CLOSED_TESTING_PROMOTION_PLAN.md  CREDENTIAL_GENERATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_RESOURCES.md  DEPLOYMENT_SOLUTION.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TRIGGER.md  DEPLOYMENT_VERIFICATION.md  DNS_CONFIGURATION_REPORT.md  Dockerfile  GOOGLE_PLAY_CONSOLE_CHECKLIST.md  GOOGLE_PLAY_CONSOLE_RESOLUTION.md  GOOGLE_PLAY_CONSOLE_SETUP.md  GOOGLE_PLAY_DEPLOYMENT_TEST.md  GOOGLE_PLAY_SERVICE_ACCOUNT_FIX.md  IMPORT_SETUP.md  KEYSTORE_INVESTIGATION.md  KEYSTORE_UPDATE_GUIDE.md  MOBILE_DEPLOYMENT.md  MOBILE_DEPLOYMENT_CUSTOMER.md  MOBILE_DEPLOYMENT_STAFF.md  PLAY_CONSOLE_SETUP_SUMMARY.md  POWERSHELL_COMMANDS_GITHUB_SECRET_UPDATE.md  PRIVACY_POLICY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PR_DESCRIPTION.md  README.md  README_CUSTOMER_IMPORT.md  SECURITY_INCIDENT_RESPONSE.md  SECURITY_REMEDIATION.md  SOLUTION_GUIDE.md  STAFF_APP_STORE_LISTING.md  STORE_ASSETS_CHECKLIST.md  (+55 more)
.github/: CI_TRIGGER.txt
arctic-enhancements-package/: README.md
assets/: index-AU2TLJ1r.css  index-DQGl1Pcm.js  web-C-CTSMn1.js  web-KqUu3Ujk.js  web-yfYpkOAR.js
backend/: .env  debug_import.py  examine_excel.py  pyproject.toml  test_curl.sh  test_import.py
backend/app/: db.py  excel_import.py  google_sheets_import.py  main.py  monitoring_service.py  quickbooks_integration.py  security.py  weather_service.py
backend/app/api/: auth.py
backend/static/: index.html
backend/static/assets/: index-CFleGmTH.js  index-kfCyS4jS.css
contracts/: ArcticOptimizerNFT.sol  deploy-nft.js
docs/: engineering-blog-post.md  privacy-policy.html
frontend/: .env  .env.example  .env.production  README.md  README_MOBILE.md  budget.json  bundle-analysis.html  capacitor.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json  vite.config.ts
frontend-customer/: .env.production  .vercelignore  README.md  capacitor.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend-staff/: .env  README_MOBILE.md  capacitor.config.ts  package-lock.json  package.json  vite.config.ts
monitoring/: backup-domain.html  dns-monitor.py  domain-troubleshoot.sh  (+7 more)
(+191 files in other folders)
