[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
gunicorn = "^23.0.0"
pandas = "^2.3.1"
openpyxl = "^3.1.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "~3.2.0"
numpy = "^2.3.1"
gspread = "^6.1.2"
google-auth = "^2.34.0"
requests-oauthlib = "^2.0.0"
python-dotenv = "^1.0.0"
xlrd = "^2.0.2"
reportlab = "^4.4.3"
ortools = "^9.8.3296"
googlemaps = "^4.10.0"
prophet = "^1.1.5"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
